--- a/style.css
+++ b/style.css
@@ -7,5 +7,12 @@ body{
     align-items: center;
     height: 700px;
     margin: 0;
-    
-}
+    }
+
+    button{
+background-color: #64a712;
+color: white;
+font-family: "Bai Jamjuree", sans-serif;
+
+
+    }
